--- a/src/express/templates/pages/search.pug
+++ b/src/express/templates/pages/search.pug
@@ -2,14 +2,22 @@ extends ../layout
 
 block constants
   - const bodyClass = `wrapper-color`
+  - const emptyFlag = query && !articles.length
 
 block main
   main
     section.search-page
-      .search-page__wrapper
+      .search-page__wrapper(class=emptyFlag ? `search-page__wrapper--empty` : ``)
         h1 Поиск
         .search.search-page__form
-          form(action='#', method='get')
+          form(action='/search', method='get')
             label
-              input(type='text', placeholder='Что ищем?')
+              input(type='text', name='query' placeholder='Что ищем?' value=`${query}`)
             button.search__button.button.button--transparent(type='submit') Найти
+          each article in articles
+            .search__result
+              time.search__date(datetime=article.createdDate) #{article.createdDate}
+              a.search__link(href=`/articles/${article.id}`) !{article.title}
+          if emptyFlag
+            p.search-page__empty
+              | Ничего не нашлось
