--- a/src/express/templates/pages/new-post.pug
+++ b/src/express/templates/pages/new-post.pug
@@ -38,8 +38,8 @@ block main
                   button.button.button--transparent Удалить
                 each category, i in categories
                   .new-publication__checkbox.new-publication__checkbox--auto
-                    input(id=`checkbox-${i}` name=`categories[]` value=category type=`checkbox` checked=setChecked(category))
-                    label(for=`checkbox-${i}`) #{category}
+                    input(id=`checkbox-${i}` name=`categories[]` value=category.id type=`checkbox` checked=setChecked(category))
+                    label(for=`checkbox-${i}`) #{category.title}
                 a.new-publication__form-link.button.button--transparent(href=`#`) Добавить категорию
               .form__wrapper.form__wrapper--text
                 .form__field.form__field--publication-text
