--- a/src/express/templates/pages/comments.pug
+++ b/src/express/templates/pages/comments.pug
@@ -16,7 +16,7 @@ block main
               img.publication__list-image(src='/img/avatar-small-2.png' width='20' height='20' alt='Аватар пользователя')
               b.publication__list-name Александр Петров
               time.publication__item-time(datetime='2019-03-21T20:33') 21.03.2019, 20:33
-            a.publication__item-text(href=`/articles/${comment.articleId}`) #{comment.title}
+            a.publication__item-text(href=`/articles/${comment.article_id}`) #{comment.title}
             p.publication__text-strong #{comment.text}
             button.publication__button.button.button--close-item(type='button')
               span.visually-hidden Закрыть строку списка
