--- a/src/express/templates/pages/post.pug
+++ b/src/express/templates/pages/post.pug
@@ -9,19 +9,19 @@ block main
         .post__wrapper
           .post__head
             a.post__backwards.button.button--backwards(href='#!') Назад
-            time.post__date(datetime=`${article.createdDate}`) #{article.createdDate}
+            time.post__date(datetime=`${article.created_at}`) #{article.created_at}
             h2.post__title.title.title--main #{article.title}
             ul.post__themes.themes
-              each category of article.category
+              each category of article.categories
                 li.themes__item
                   a.themes__item-link(href='#!')
-                    | #{category}
+                    | #{category.title}
                     sup 88
                   button.themes__remove-btn(type='button') Удалить категорию
           .post__picture
-            img(src=`/img/${article.picture}`, alt=article.title)
+            img(src=`/img/${article.image}`, alt=article.title)
           .post__text
-            p #{article.fullText}
+            p #{article.full_text}
       .post__wrapper.post__wrapper--comments
         section.post__comments.comments
           if article.comments.length
