--- a/src/express/templates/pages/new-post.pug
+++ b/src/express/templates/pages/new-post.pug
@@ -48,6 +48,7 @@ block main
                 .form__field.form__field--publication-text
                   label
                     textarea(name=`text` rows=`5` placeholder=`Полный текст публикации`) #{post.text}
+              +insertErrorMessage(validationMessages)
 
 block scripts
   script(src='/js/vandor.js')
