--- a/src/express/templates/pages/post.pug
+++ b/src/express/templates/pages/post.pug
@@ -39,11 +39,12 @@ block main
           else
             h2.comments__title.title.title--middle Комментарии отсутствуют
           .comments__footer.comments__footer--user
-            form(action='#', method='POST')
+            form(action=`/articles/${article.id}/comment`, method='POST')
               .comments__avatar.avatar
                 img(src='/img/avatar-2.png', alt='аватар пользователя')
               label
-                textarea(rows='1', placeholder='Присоединиться к обсуждению')
+                textarea(rows='1', placeholder='Присоединиться к обсуждению', name='text') #{text || ''}
+              +insertErrorMessage(validationMessages)
               button.comments__button.button.button--colored(type='submit') Опубликовать
 
 block scripts
