--- a/src/express/templates/pages/main.pug
+++ b/src/express/templates/pages/main.pug
@@ -76,7 +76,7 @@ block main
                   a.preview__breadcrumbs-link(href='#') #{category.title}
             .preview__background
               img.preview__background-image(src=`/img/${article.image}` width='460' height='240' alt=article.title)
-            time.preview__time(datetime=`${article.created_at}`) #{article.created_at}
+            time.preview__time(datetime=`${article.createdAt}`) #{article.createdAt}
             h3.preview__name
               a.preview__name-link(href=`/articles/${article.id}`) #{article.title}
             p.preview__text #{article.announce}
