--- a/src/express/templates/pages/search.pug
+++ b/src/express/templates/pages/search.pug
@@ -16,7 +16,7 @@ block main
             button.search__button.button.button--transparent(type='submit') Найти
           each article in articles
             .search__result
-              time.search__date(datetime=article.created_at) #{article.created_at}
+              time.search__date(datetime=article.createdAt) #{article.createdAt}
               a.search__link(href=`/articles/${article.id}`) !{article.title}
           if emptyFlag
             p.search-page__empty
